objects/EDX_Discharge_Response__c.object
<CustomObject>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>clcommon__Collateral__c</referenceTo>
        <relationshipLabel>EDX Discharge Response</relationshipLabel>
        <relationshipName>EDX_Discharge_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>errors__c</fullName>
        <label>errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integration_Error_Status_Code__c</fullName>
        <label>integration Error Status Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integration_Error_Status__c</fullName>
        <label>integration Error Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDischarged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDischarged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>meta__c</fullName>
        <label>meta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EDX Discharge Response</label>
    <nameField>
        <displayFormat>EDR-{00000000}</displayFormat>
        <label>EDXDischargeResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDX Discharge Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>